# ml_service

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/server/apps/endpoints/: models.py  serializers.py  tests.py  urls.py  views.py
backend/server/apps/endpoints/migrations/: 0001_initial.py  0002_abtest.py
backend/server/apps/ml/: registry.py  tests.py
backend/server/server/: settings.py  urls.py  wsgi.py
docker/backend/: Dockerfile  wsgi-entrypoint.sh
docker/nginx/: Dockerfile
research/: ab_test.ipynb  research.ipynb
