[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["SerafimaK <srfm.muz@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipykernel = "^6.28.0"
scikit-learn = "^1.3.2"
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
